--- a/Shout/app/src/main/res/values/strings.xml
+++ b/Shout/app/src/main/res/values/strings.xml
@@ -14,4 +14,10 @@
     <string name="menu_chatrooms">Chat Rooms</string>
     <string name="menu_pm">Messages</string>
     <string name="menu_profile">Profile</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fb_profile_picture">facebook_profile_picture</string>
+    <string name="my_fb_likes_label">My Facebook Likes:</string>
+    <string name="title_activity_discovery">Discovery</string>
 </resources>
