--- a/Shout/app/src/main/res/values/strings.xml
+++ b/Shout/app/src/main/res/values/strings.xml
@@ -36,6 +36,10 @@
     <string name="ok">ok</string>
     <string name="crc_form_incomplete">Please ensure that all fields have been completed and try again.</string>
     <string name="crc_form_incomplete_title">Missing Information</string>
+    <string name="common_fb_likes_label">Likes in common:</string>
+    <string name="profile_name">Profile Name</string>
+    <string name="leaveChatroom_cancel_dialog_title">Leave Chatroom</string>
+    <string name="leaveChatroom_cancel_dialog_message">Are you sure ?\n The chatroom can be joined again later as soon as it has not expired and is in range.</string>
 
     <string-array name="categories_array">
         <item></item>
